[gd_scene load_steps=16 format=3 uid="uid://q4do4wgq6uk8"]

[ext_resource type="Script" path="res://scripts/enemies/elite_enemies/femboy_elf.gd" id="1_kgnvo"]
[ext_resource type="Material" uid="uid://c13ui871eji3r" path="res://assets/shaders/flash.tres" id="2_50dd6"]
[ext_resource type="Resource" uid="uid://bae5b2w8gb0ek" path="res://resources/enemies/elite_enemies/femboy_elf.tres" id="2_62rmv"]
[ext_resource type="Texture2D" uid="uid://bfvq0ycqm6028" path="res://assets/enemies/elf_archer_boss_sheet.png" id="3_tal4j"]
[ext_resource type="PackedScene" uid="uid://cpp0tc7uqrv4" path="res://scenes/shared/hurtbox.tscn" id="4_co51d"]
[ext_resource type="PackedScene" uid="uid://mjwkfxpnwct6" path="res://scenes/shared/continuous_hitbox.tscn" id="5_eixao"]
[ext_resource type="Texture2D" uid="uid://bpxvb4opdk1xy" path="res://assets/shared/shadow_m.png" id="6_f3q0f"]
[ext_resource type="Script" path="res://scripts/shared/shadow.gd" id="7_sag14"]
[ext_resource type="Texture2D" uid="uid://ddfk61tmlrep3" path="res://assets/enemies/elf_archer_boss_health_under.png" id="8_a42xe"]
[ext_resource type="Texture2D" uid="uid://dgc7bsnkobfcd" path="res://assets/enemies/elf_archer_boss_health_over.png" id="9_n022p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mt275"]
radius = 5.0
height = 38.0

[sub_resource type="Animation" id="Animation_bijx6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ykwb6"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_b4w2n"]
resource_name = "shooting"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ldc1"]
_data = {
"RESET": SubResource("Animation_bijx6"),
"running": SubResource("Animation_ykwb6"),
"shooting": SubResource("Animation_b4w2n")
}

[node name="FemboyElf" type="Node2D"]
script = ExtResource("1_kgnvo")
ACCELERATION = 200
FRICTION = 200
stats = ExtResource("2_62rmv")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_50dd6")
position = Vector2(0, -31)
texture = ExtResource("3_tal4j")
hframes = 10

[node name="Hurtbox" parent="." instance=ExtResource("4_co51d")]
visible = false
position = Vector2(0, -7)
collision_layer = 4
owned_by = 2

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(0, -38, -6, -35, -8, -31, -9, -19, -7, 8, 2, 8, 5, -6, 4, -25, 7, -32, 2, -38)

[node name="ContinuousHitbox" parent="." instance=ExtResource("5_eixao")]
visible = false
collision_mask = 3
owned_by = 2

[node name="CollisionPolygon2D" parent="ContinuousHitbox" index="0"]
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContinuousHitbox"]
position = Vector2(-1, -19)
shape = SubResource("CapsuleShape2D_mt275")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PathfindTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ldc1")
}

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(0, -21)

[node name="Pattern1Timer" type="Timer" parent="."]

[node name="Pattern2Timer" type="Timer" parent="."]

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-2, -25)
texture = ExtResource("6_f3q0f")
script = ExtResource("7_sag14")

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -13.0
offset_top = -64.0
offset_right = 51.0
value = 100.0
texture_under = ExtResource("8_a42xe")
texture_progress = ExtResource("9_n022p")

[node name="WalkingPhaseTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="take_damage" from="Hurtbox" to="." method="_on_hurtbox_take_damage"]
[connection signal="timeout" from="PathfindTimer" to="." method="_on_pathfind_timer_timeout"]
[connection signal="timeout" from="Pattern1Timer" to="." method="_on_pattern1_timer_timeout"]
[connection signal="timeout" from="Pattern2Timer" to="." method="_on_pattern2_timer_timeout"]
[connection signal="timeout" from="WalkingPhaseTimer" to="." method="_on_walking_phase_timer_timeout"]

[editable path="Hurtbox"]
[editable path="ContinuousHitbox"]
